--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,11 +25,21 @@ html {
 html,
 body {
   max-width: 100vw;
+  min-height: 100vh;
   overflow-x: hidden;
   background-color: var(--background);
   color: var(--foreground);
   line-height: 1.7;
   font-size: 16px;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
 }
 
 ::selection {
